--- a/drone.html
+++ b/drone.html
@@ -348,7 +348,7 @@
 		<div id="info">
 		<pre>
 		Inspired by Magpie Pedals' Beehive (https://www.magpiepedals.com/shop/product/the-beehive) and built on top of Pizzicato.js (https://alemangui.github.io/pizzicato/),
-		Oscarr the oscillaor (OSCillating ARRay) is a drone instrument made of chewing gum, spaghetti code and outdated HTML tags. But it works. And it's fun. And I like to listen to it.
+		Oscarr the oscillator (OSCillating ARRay) is a drone instrument made of chewing gum, spaghetti code and outdated HTML tags. But it works. And it's fun. And I like to listen to it.
 
 		Play it. Have it play itself. Push buttons, move sliders, take the code from github, modify it however you like and make it your own.
 		</pre>
